fix window rescale issues

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <label>Animation type: </label>
                         <select id="animation_type_select">
                             <option value="random_nodes">Random nodes</option>
-                            <option value="wipe_off_right" selected="true">Wipe off (rightward)</option>
+                            <option value="wipe_right" selected="true">Wipe right</option>
                         </select>
                     </form>
                 </div>
@@ -94,8 +94,10 @@
             const ANIMATION_RANDOM_NODES = 30;
             const ANIMATION_WIPE_INITIAL_VELOCITY_X = 0;
             const ANIMATION_WIPE_INITIAL_VELOCITY_Y = 0;
-            const ANIMATION_WIPE_INCREMENT_VELOCITY_X = 0.75;
-            const ANIMATION_WIPE_INCREMENT_VELOCITY_Y = 0.75;
+            const ANIMATION_WIPE_INCREMENT_VELOCITY_X = 0.25;
+            const ANIMATION_WIPE_INCREMENT_VELOCITY_Y = 0.25;
+            const ANIMATION_WIPE_EASE_FN = "lienar";
+            const ANIMATION_WIPE_DURATION_MS = 10;
 
             const SVG_ASSET_ROOT = "assets/components/";
 
@@ -263,16 +265,18 @@
                         var layer_id = node_layer_obj['id'];
                         var col_shift = (col_idx % 2) ? 0 : node_layers.max_height / 2;
                         var row_shift = node_layers.max_width / 2;
-                        /* update per-node layer model */
+                        /* calculate per-node layer model values */
                         node_layer_obj['top'] = (row_idx * (node_layers.max_height + node_layer_margin.top + node_layer_margin.bottom) - col_shift) * NODE_ROW_SQUEEZE_FACTOR;
                         node_layer_obj['left'] = col_idx * NODE_COL_SQUEEZE_FACTOR * (node_layers.max_width + node_layer_margin.left + node_layer_margin.right) - row_shift;
                         node_layer_obj['width'] = NODE_LAYER_SCALE * node_layers.max_width + node_layer_margin.left + node_layer_margin.right;
                         node_layer_obj['height'] = NODE_LAYER_SCALE * node_layers.max_height + node_layer_margin.top + node_layer_margin.bottom;
+                        node_layer_obj['original_top'] = node_layer_obj['top'];
+                        node_layer_obj['original_left'] = node_layer_obj['left'];
                         /* update UI */
                         $('#' + layer_id).css("width", num_as_px(node_layer_obj['width']));
                         $('#' + layer_id).css("height", num_as_px(node_layer_obj['height']));
-                        $('#' + layer_id).css("top", num_as_px(node_layer_obj['top']));
-                        $('#' + layer_id).css("left", num_as_px(node_layer_obj['left']));
+                        d3.select('#' + layer_id).transition().ease("linear").duration(10).style("top", num_as_px(node_layer_obj['original_top']));
+                        d3.select('#' + layer_id).transition().ease("linear").duration(10).style("left", num_as_px(node_layer_obj['original_left']));
                     }
                 }
                 if (cb) cb();
@@ -335,7 +339,7 @@
                 }
             };
 
-            var setup_animation_wipe_off_right = function() {
+            var setup_animation_wipe_right = function() {
                 // get last column in each row and start moving it
                 animation_wipe_current_column_idx = node_layers.cols - 1;
                 for (var row_idx = 0; row_idx < node_layers.rows; row_idx++) {
@@ -347,13 +351,13 @@
                     node_layer_obj['velocity_x'] += ANIMATION_WIPE_INCREMENT_VELOCITY_X;
                     d3.select("#" + layer_id)
                                 .selectAll('.node_layer_transform')
-                                .attr("class", "node_layer_transform wipe_off_right");
+                                .attr("class", "node_layer_transform wipe_right");
                     node_layer_obj['left'] = node_layer_obj['left'] + node_layer_obj['velocity_x'];
-                    d3.select('#' + layer_id).transition().ease("exp").duration(0).style("left", num_as_px(node_layer_obj['left']));
+                    d3.select('#' + layer_id).transition().ease(ANIMATION_WIPE_EASE_FN).duration(ANIMATION_WIPE_DURATION_MS).style("left", num_as_px(node_layer_obj['left']));
                 }
             };
 
-            var update_animation_wipe_off_right = function() {
+            var update_animation_wipe_right = function() {
                 if (node_layers_all_visible) {
                     // move the current column off
                     var leftmost_point = 0;
@@ -365,16 +369,24 @@
                             node_layer_obj['static'] = false;
                             node_layers_animating.push(layer_id);
                         }
-                        node_layer_obj['velocity_x'] += ANIMATION_WIPE_INCREMENT_VELOCITY_X;
+                        node_layer_obj['velocity_x'] += ANIMATION_WIPE_INCREMENT_VELOCITY_X * 0.33 * (node_layers.cols - animation_wipe_current_column_idx);
                         d3.select("#" + layer_id)
                                 .selectAll('.node_layer_transform')
-                                .attr("class", "node_layer_transform wipe_off_right");
+                                .attr("class", "node_layer_transform wipe_right")
+                                .attr("velocity_x", node_layer_obj['velocity_x']);
                         node_layer_obj['left'] = node_layer_obj['left'] + node_layer_obj['velocity_x'];
                         leftmost_point = node_layer_obj['left'];
-                        d3.select('#' + layer_id).transition().ease("exp").duration(0).style("left", num_as_px(node_layer_obj['left']));
+                        d3.select('#' + layer_id).transition().ease(ANIMATION_WIPE_EASE_FN).duration(ANIMATION_WIPE_DURATION_MS).style("left", num_as_px(node_layer_obj['left']));
                     }
-                    if (leftmost_point >= logo_background.width && animation_wipe_current_column_idx > 0)
+                    if (leftmost_point >= logo_background.width && animation_wipe_current_column_idx >= 0) {
                         animation_wipe_current_column_idx--;
+                    }
+                    if (animation_wipe_current_column_idx == -1) {
+                        animation_timer_on_hold = true;
+                        position_node_layers();
+                        trigger_animation_type_selection();
+                        animation_timer_on_hold = false;
+                    }
                 }
             };
 
@@ -406,8 +418,8 @@
                         node_layer_rotation_degrees = (animation_frame_idx / NODE_LAYER_SLOWDOWN_FACTOR) % 360;
                         update_animation_random_nodes();
                     }
-                    else if (animation_type_selection == "wipe_off_right") {
-                        update_animation_wipe_off_right();
+                    else if (animation_type_selection == "wipe_right") {
+                        update_animation_wipe_right();
                     }
                     animation_frame_idx++;
                     return animation_timer_on_hold;
@@ -417,10 +429,13 @@
             window.addEventListener("resize", function() {
                 if (this.resize_window_timer)
                     clearTimeout(this.resize_window_timer);
-                this.resize_window_timer = setTimeout(function() { 
+                this.resize_window_timer = setTimeout(function() {
+                    animation_timer_on_hold = true;
                     position_wordmark();
                     position_content();
                     position_node_layers();
+                    trigger_animation_type_selection();
+                    animation_timer_on_hold = false;
                 }, 200);
             });
 
@@ -433,11 +448,11 @@
                         setup_animation_random_nodes(ANIMATION_RANDOM_NODES);
                     }
                 }
-                else if (animation_type_selection == "wipe_off_right") {
+                else if (animation_type_selection == "wipe_right") {
                     if (node_layers_all_visible) {
                         update_node_layers_state();
                         reset_node_layers_animation_state();
-                        setup_animation_wipe_off_right();
+                        setup_animation_wipe_right();
                     }
                 }
             }, false);
